--- a/src/main/webapp/cadastrarVoluntario.xhtml
+++ b/src/main/webapp/cadastrarVoluntario.xhtml
@@ -23,12 +23,12 @@
 					<h:panelGrid id="panelGrid-campos-form" columns="2"
 						cellpadding="10">
 
-						<p:outputLabel value="Usuario" for="inputText-usuario-cadastro" />
+						<p:outputLabel value="Usuário" for="inputText-usuario-cadastro" />
 						<p:inputText id="inputText-usuario-cadastro" style="width:90%"
 							maxlength="70"
 							value="#{voluntarioController.voluntarioModel.usuarioEntity.usuario}"
 							required="true"
-							requiredMessage="O campo usuario é de preenchimento obrigatório" />
+							requiredMessage="O campo usuário é de preenchimento obrigatório" />
 
 						<p:outputLabel value="Senha" for="inputText-senha-cadastro" />
 						<p:password id="inputText-senha-cadastro" style="width:90%"
@@ -87,7 +87,7 @@
 							maxlength="80"
 							value="#{voluntarioController.voluntarioModel.email}"
 							required="true"  validatorMessage="Email incorreto"
-							requiredMessage="O campo email é de preenchimento obrigatório">
+							requiredMessage="O campo e-mail é de preenchimento obrigatório">
 							<f:validateRegex 
 								pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
 						</p:inputText>
@@ -106,7 +106,7 @@
 						<p:inputText id="inputText-rua" style="width:100%" maxlength="200"
 							value="#{voluntarioController.voluntarioModel.rua}" />
 
-						<p:outputLabel value="Numero" for="inputText-numero" />
+						<p:outputLabel value="Número" for="inputText-numero" />
 						<p:inputText id="inputText-numero" style="width:50px"
 							maxlength="200"
 							value="#{voluntarioController.voluntarioModel.numero}" />
@@ -173,20 +173,19 @@
 						<p:separator />
 						<br />
 
-						<p:outputLabel value="Causas" for="causas" />
+						<p:outputLabel value="Causa(s)" for="causas" />
 						<p:selectManyCheckbox id="causas"
 							value="#{voluntarioController.voluntarioModel.causas}"
 							layout="grid" columns="2">
-							<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
-							<f:selectItem itemLabel="Saude" itemValue="1" />
+							<f:selectItem itemLabel="Pessoas com deficiência" itemValue="0" />
+							<f:selectItem itemLabel="Saúde" itemValue="1" />
 							<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
-							<f:selectItem itemLabel="Participação cidada" itemValue="3" />
+							<f:selectItem itemLabel="Participação cidadã" itemValue="3" />
 							<f:selectItem itemLabel="Meio Ambiente" itemValue="4" />
 							<f:selectItem itemLabel="Idosos" itemValue="5" />
 							<f:selectItem itemLabel="Educação" itemValue="6" />
 							<f:selectItem itemLabel="Defesa de direitos" itemValue="7" />
-							<f:selectItem itemLabel="Cultura, Esporte e/ou Arte"
-								itemValue="8" />
+							<f:selectItem itemLabel="Cultura, Esporte e/ou Arte" itemValue="8" />
 							<f:selectItem itemLabel="Crianças/Jovens" itemValue="9" />
 							<f:selectItem itemLabel="Consumo Consciente" itemValue="10" />
 							<f:selectItem itemLabel="Capacitação Profissional" itemValue="11" />
@@ -196,21 +195,21 @@
 						<p:separator />
 						<br />
 
-						<p:outputLabel value="Habilidades" for="habilidades" />
+						<p:outputLabel value="Habilidade(s)" for="habilidades" />
 						<p:selectManyCheckbox id="habilidades"
 							value="#{voluntarioController.voluntarioModel.habilidades}"
 							layout="grid" columns="2">
 							<f:selectItem itemLabel="Artes/Artesanato" itemValue="0" />
 							<f:selectItem itemLabel="Comunicação" itemValue="1" />
-							<f:selectItem itemLabel="Dança/Musica" itemValue="2" />
+							<f:selectItem itemLabel="Dança/Música" itemValue="2" />
 							<f:selectItem itemLabel="Direito" itemValue="3" />
 							<f:selectItem itemLabel="Educação" itemValue="4" />
 							<f:selectItem itemLabel="Esportes" itemValue="5" />
 							<f:selectItem itemLabel="Gastronomia" itemValue="6" />
 							<f:selectItem itemLabel="Gestão" itemValue="7" />
 							<f:selectItem itemLabel="Idiomas" itemValue="8" />
-							<f:selectItem itemLabel="Informatica/Eletronica" itemValue="9" />
-							<f:selectItem itemLabel="Saude/Psicologia" itemValue="10" />
+							<f:selectItem itemLabel="Informática/Eletrônica" itemValue="9" />
+							<f:selectItem itemLabel="Saúde/Psicologia" itemValue="10" />
 							<f:selectItem itemLabel="Outras" itemValue="11" />
 						</p:selectManyCheckbox>
 
@@ -226,23 +225,23 @@
 							<f:selectItem itemLabel="Quarta-Feira" itemValue="3" />
 							<f:selectItem itemLabel="Quinta-Feira" itemValue="4" />
 							<f:selectItem itemLabel="Sexta-Feira" itemValue="5" />
-							<f:selectItem itemLabel="Sabado" itemValue="6" />
+							<f:selectItem itemLabel="Sábado" itemValue="6" />
 							<f:selectItem itemLabel="Domingo" itemValue="0" />
 						</p:selectManyCheckbox>
 
 						<p:selectManyCheckbox id="periodos" layout="grid" columns="1"
 							value="#{voluntarioController.voluntarioModel.disponibilidadePeriodos}">
-							<f:selectItem itemLabel="Manha" itemValue="0" />
+							<f:selectItem itemLabel="Manhã" itemValue="0" />
 							<f:selectItem itemLabel="Tarde" itemValue="1" />
 							<f:selectItem itemLabel="Noite" itemValue="2" />
 						</p:selectManyCheckbox>
 
 						<p:outputLabel for="selectOneRadio-trabalho"
-							value="Trabalho à distancia:" />
+							value="Trabalho à distância:" />
 						<p:selectOneRadio id="selectOneRadio-trabalho"
 							value="#{voluntarioController.voluntarioModel.trabalhoDistancia}"
 							required="true"
-							requiredMessage="O campo trabalho à distancia é de preenchimento obrigatório">
+							requiredMessage="O campo trabalho à distância é de preenchimento obrigatório">
 							<f:selectItem itemLabel="Sim" itemValue="Sim" />
 							<f:selectItem itemLabel="Não" itemValue="Não" />
 						</p:selectOneRadio>
@@ -254,11 +253,9 @@
 
 					</h:panelGrid>
 
-					<p:messages showDetail="true" autoUpdate="true" closable="true"
-						severity="warn" />
+					<p:messages showDetail="true" autoUpdate="true" closable="true" severity="warn" />
 					<p:messages autoUpdate="true" closable="true" severity="error" />
-					<p:messages showDetail="true" autoUpdate="true" closable="true"
-						severity="info" />
+					<p:messages showDetail="true" autoUpdate="true" closable="true" severity="info" />
 
 				</h:form>
 
