--- a/src/main/webapp/sistema/ONG/recomendarVoluntario.xhtml
+++ b/src/main/webapp/sistema/ONG/recomendarVoluntario.xhtml
@@ -19,7 +19,7 @@
 				emptyMessage="Não há voluntarios recomendados para esta vaga até o momento."
 				style="margin-top:20px">
 
-				<f:facet name="header"> Voluntario recomendados para a vaga cadastrada: </f:facet>
+				<f:facet name="header"> Voluntarios recomendados para a vaga cadastrada: </f:facet>
 
 				<p:panel>
 					<h:panelGrid columns="1" style="width:100%;">
