--- a/src/main/webapp/sistema/ONG/cadastrarVaga.xhtml
+++ b/src/main/webapp/sistema/ONG/cadastrarVaga.xhtml
@@ -13,7 +13,7 @@
 <ui:composition template="/template/ONG/layoutBase.xhtml">
 	<ui:define name="content">
 		<p:tabView style="width:50% ;margin:auto;">
-			<p:tab title="Cadastro de Vaga de Voluntariado"
+			<p:tab title="Cadastro de vaga de voluntariado"
 				enctype="multipart/form-data">
 
 				<h:form id="form-cadastro" enctype="multipart/form-data">
@@ -21,11 +21,11 @@
 					<h:panelGrid id="panelGrid-campos-form" columns="2"
 						cellpadding="10">
 
-						<p:outputLabel value="Titulo" for="inputText-titulo" />
+						<p:outputLabel value="Título" for="inputText-titulo" />
 						<p:inputText id="inputText-titulo" style="width:100%"
 							maxlength="80" value="#{vagaController.vagaModel.titulo}"
 							required="true"
-							requiredMessage="O campo titulo é de preenchimento obrigatório" />
+							requiredMessage="O campo título é de preenchimento obrigatório" />
 
 						<p:outputLabel value="Descrição" for="inputText-descricao" />
 						<p:inputTextarea rows="6" cols="33" id="inputText-descricao"
@@ -33,13 +33,13 @@
 							value="#{vagaController.vagaModel.descricao}" required="true"
 							requiredMessage="O campo descrição é de preenchimento obrigatório" />
 
-						<p:outputLabel value="Responsavel pela Vaga"
+						<p:outputLabel value="Responsável pela Vaga"
 							for="inputText-responsavel" />
 						<p:inputText id="inputText-responsavel" style="width:100%"
 							maxlength="80"
 							value="#{vagaController.vagaModel.nomeResponsavel}" />
 
-						<p:outputLabel value="Email" for="inputText-email" />
+						<p:outputLabel value="E-mail" for="inputText-email" />
 						<p:inputText id="inputText-email" style="width:100%"
 							maxlength="80" value="#{vagaController.vagaModel.email}" validatorMessage="Email incorreto"
 							requiredMessage="O campo email é de preenchimento obrigatório">
@@ -51,21 +51,20 @@
 						<p:fileUpload id="foto" mode="simple"
 							value="#{vagaController.uploadedFile}" />
 
-						<p:outputLabel value="Causas" />
+						<p:outputLabel value="Causa(s)" />
 						<p:selectManyCheckbox id="causas"
 							value="#{vagaController.vagaModel.causas}" layout="grid"
 							columns="2" required="true"
-							requiredMessage="O campo Causas é de preenchimento obrigatório">
-							<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
-							<f:selectItem itemLabel="Saude" itemValue="1" />
+							requiredMessage="O campo causas é de preenchimento obrigatório">
+							<f:selectItem itemLabel="Pessoas com deficiência" itemValue="0" />
+							<f:selectItem itemLabel="Saúde" itemValue="1" />
 							<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
-							<f:selectItem itemLabel="Participação cidada" itemValue="3" />
+							<f:selectItem itemLabel="Participação cidadã" itemValue="3" />
 							<f:selectItem itemLabel="Meio Ambiente" itemValue="4" />
 							<f:selectItem itemLabel="Idosos" itemValue="5" />
 							<f:selectItem itemLabel="Educação" itemValue="6" />
 							<f:selectItem itemLabel="Defesa de direitos" itemValue="7" />
-							<f:selectItem itemLabel="Cultura, Esporte e/ou Arte"
-								itemValue="8" />
+							<f:selectItem itemLabel="Cultura, Esporte e/ou Arte" itemValue="8" />
 							<f:selectItem itemLabel="Crianças/Jovens" itemValue="9" />
 							<f:selectItem itemLabel="Consumo Consciente" itemValue="10" />
 							<f:selectItem itemLabel="Capacitação Profissional" itemValue="11" />
@@ -74,48 +73,46 @@
 						</p:selectManyCheckbox>
 
 
-						<p:outputLabel value="Habilidades  Necessárias" />
+						<p:outputLabel value="Habilidade(s) necessária(s)" />
 
 						<p:selectManyCheckbox id="habilidades"
 							value="#{vagaController.vagaModel.habilidades}" layout="grid"
 							columns="2" required="true"
-							requiredMessage="O campo Habilidades é de preenchimento obrigatório">
+							requiredMessage="O campo habilidades é de preenchimento obrigatório">
 							<f:selectItem itemLabel="Artes/Artesanato" itemValue="0" />
 							<f:selectItem itemLabel="Comunicação" itemValue="1" />
-							<f:selectItem itemLabel="Dança/Musica" itemValue="2" />
+							<f:selectItem itemLabel="Dança/Música" itemValue="2" />
 							<f:selectItem itemLabel="Direito" itemValue="3" />
 							<f:selectItem itemLabel="Educação" itemValue="4" />
 							<f:selectItem itemLabel="Esportes" itemValue="5" />
 							<f:selectItem itemLabel="Gastronomia" itemValue="6" />
 							<f:selectItem itemLabel="Gestão" itemValue="7" />
 							<f:selectItem itemLabel="Idiomas" itemValue="8" />
-							<f:selectItem itemLabel="Informatica/Eletronica" itemValue="9" />
-							<f:selectItem itemLabel="Saude/Psicologia" itemValue="10" />
+							<f:selectItem itemLabel="Informática/Eletrônica" itemValue="9" />
+							<f:selectItem itemLabel="Saúde/Psicologia" itemValue="10" />
 							<f:selectItem itemLabel="Outras" itemValue="11" />
 						</p:selectManyCheckbox>
 
 
 						<p:outputLabel value="Disponibilidade:" />
-
+						<br />
 						<p:selectManyCheckbox id="dia"
 							value="#{vagaController.vagaModel.dias}" layout="grid"
 							columns="1" required="true"
-							requiredMessage="O campo Disponibilidade é de preenchimento obrigatório">
+							requiredMessage="O campo disponibilidade é de preenchimento obrigatório">
 							<f:selectItem itemLabel="Segunda-Feira" itemValue="1" />
 							<f:selectItem itemLabel="Terça-Feira" itemValue="2" />
 							<f:selectItem itemLabel="Quarta-Feira" itemValue="3" />
 							<f:selectItem itemLabel="Quinta-Feira" itemValue="4" />
 							<f:selectItem itemLabel="Sexta-Feira" itemValue="5" />
-							<f:selectItem itemLabel="Sabado" itemValue="6" />
+							<f:selectItem itemLabel="Sábado" itemValue="6" />
 							<f:selectItem itemLabel="Domingo" itemValue="0" />
 						</p:selectManyCheckbox>
 
-
-						<p:outputLabel value="Periodo" />
 						<p:selectManyCheckbox id="periodo"
 							value="#{vagaController.vagaModel.periodos}" layout="grid"
-							columns="3">
-							<f:selectItem itemLabel="Manha" itemValue="0" />
+							columns="1">
+							<f:selectItem itemLabel="Manhã" itemValue="0" />
 							<f:selectItem itemLabel="Tarde" itemValue="1" />
 							<f:selectItem itemLabel="Noite" itemValue="2" />
 						</p:selectManyCheckbox>
@@ -136,12 +133,9 @@
 
 					</h:panelGrid>
 
-					<p:messages showDetail="true" autoUpdate="true" closable="true"
-						severity="warn" />
+					<p:messages showDetail="true" autoUpdate="true" closable="true" severity="warn" />
 					<p:messages autoUpdate="true" closable="true" severity="error" />
-					<p:messages showDetail="true" autoUpdate="true" closable="true"
-						severity="info" />
-
+					<p:messages showDetail="true" autoUpdate="true" closable="true" severity="info" />
 
 				</h:form>
 
