--- a/src/main/webapp/sistema/ONG/editarVaga.xhtml
+++ b/src/main/webapp/sistema/ONG/editarVaga.xhtml
@@ -13,7 +13,7 @@
 <ui:composition template="/template/ONG/layoutBase.xhtml">
 	<ui:define name="content">
 		<p:tabView style="width:50% ;margin:auto;">
-			<p:tab title="Editar de Vaga de Voluntariado"
+			<p:tab title="Editar vaga de voluntariado"
 				enctype="multipart/form-data">
 
 				<h:form id="form-excluir-vaga" enctype="multipart/form-data">
@@ -29,12 +29,12 @@
 					<h:panelGrid id="panelGrid-campos-form" columns="2"
 						cellpadding="10">
 
-						<p:outputLabel value="Titulo" for="inputText-titulo" />
+						<p:outputLabel value="Título" for="inputText-titulo" />
 						<p:inplace id="inputText-titulo" editor="true"
 							emptyLabel="Clique para editar">
 							<p:inputText style="width:100%" maxlength="80"
 								value="#{editarVaga.vaga.titulo}" required="true"
-								requiredMessage="O campo titulo é de preenchimento obrigatório" />
+								requiredMessage="O campo título é de preenchimento obrigatório" />
 						</p:inplace>
 
 						<p:outputLabel value="Descrição" for="inputText-descricao" />
@@ -46,7 +46,7 @@
 								requiredMessage="O campo descrição é de preenchimento obrigatório" />
 						</p:inplace>
 
-						<p:outputLabel value="Responsavel pela Vaga"
+						<p:outputLabel value="Responsável pela vaga"
 							for="inputText-responsavel" />
 						<p:inplace id="inputText-responsavel" editor="true"
 							emptyLabel="Clique para editar">
@@ -54,7 +54,7 @@
 								value="#{editarVaga.vaga.nomeResponsavel}" />
 						</p:inplace>
 
-						<p:outputLabel value="Email" for="inputText-email" />
+						<p:outputLabel value="E-mail" for="inputText-email" />
 						<p:inplace id="inputText-email" editor="true"
 							emptyLabel="Clique para editar">
 							<p:inputText style="width:100%" maxlength="80"
@@ -65,21 +65,20 @@
 						<p:fileUpload id="foto" mode="simple"
 							value="#{editarVaga.uploadedFile}" />
 
-						<p:outputLabel value="Causas" />
+						<p:outputLabel value="Causa(s)" />
 						<p:selectManyCheckbox id="causas"
 							value="#{editarVaga.vaga.causas}" layout="grid" columns="2"
 							required="true"
-							requiredMessage="O campo Causas é de preenchimento obrigatório">
-							<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
-							<f:selectItem itemLabel="Saude" itemValue="1" />
+							requiredMessage="O campo causas é de preenchimento obrigatório">
+							<f:selectItem itemLabel="Pessoas com deficiência" itemValue="0" />
+							<f:selectItem itemLabel="Saúde" itemValue="1" />
 							<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
-							<f:selectItem itemLabel="Participação cidada" itemValue="3" />
+							<f:selectItem itemLabel="Participação cidadã" itemValue="3" />
 							<f:selectItem itemLabel="Meio Ambiente" itemValue="4" />
 							<f:selectItem itemLabel="Idosos" itemValue="5" />
 							<f:selectItem itemLabel="Educação" itemValue="6" />
 							<f:selectItem itemLabel="Defesa de direitos" itemValue="7" />
-							<f:selectItem itemLabel="Cultura, Esporte e/ou Arte"
-								itemValue="8" />
+							<f:selectItem itemLabel="Cultura, Esporte e/ou Arte" itemValue="8" />
 							<f:selectItem itemLabel="Crianças/Jovens" itemValue="9" />
 							<f:selectItem itemLabel="Consumo Consciente" itemValue="10" />
 							<f:selectItem itemLabel="Capacitação Profissional" itemValue="11" />
@@ -88,29 +87,29 @@
 						</p:selectManyCheckbox>
 
 
-						<p:outputLabel value="Habilidades  Necessárias" />
+						<p:outputLabel value="Habilidade(s) necessária(s)" />
 
 						<p:selectManyCheckbox id="habilidades"
 							value="#{editarVaga.vaga.habilidades}" layout="grid" columns="2"
 							required="true"
-							requiredMessage="O campo Habilidades é de preenchimento obrigatório">
+							requiredMessage="O campo habilidades é de preenchimento obrigatório">
 							<f:selectItem itemLabel="Artes/Artesanato" itemValue="0" />
 							<f:selectItem itemLabel="Comunicação" itemValue="1" />
-							<f:selectItem itemLabel="Dança/Musica" itemValue="2" />
+							<f:selectItem itemLabel="Dança/Música" itemValue="2" />
 							<f:selectItem itemLabel="Direito" itemValue="3" />
 							<f:selectItem itemLabel="Educação" itemValue="4" />
 							<f:selectItem itemLabel="Esportes" itemValue="5" />
 							<f:selectItem itemLabel="Gastronomia" itemValue="6" />
 							<f:selectItem itemLabel="Gestão" itemValue="7" />
 							<f:selectItem itemLabel="Idiomas" itemValue="8" />
-							<f:selectItem itemLabel="Informatica/Eletronica" itemValue="9" />
-							<f:selectItem itemLabel="Saude/Psicologia" itemValue="10" />
+							<f:selectItem itemLabel="Informática/Eletrônica" itemValue="9" />
+							<f:selectItem itemLabel="Saúde/Psicologia" itemValue="10" />
 							<f:selectItem itemLabel="Outras" itemValue="11" />
 						</p:selectManyCheckbox>
 
 
 						<p:outputLabel value="Disponibilidade:" />
-
+						<br />
 						<p:selectManyCheckbox id="dia" value="#{editarVaga.vaga.dias}"
 							layout="grid" columns="1" required="true"
 							requiredMessage="O campo Disponibilidade é de preenchimento obrigatório">
@@ -119,15 +118,13 @@
 							<f:selectItem itemLabel="Quarta-Feira" itemValue="3" />
 							<f:selectItem itemLabel="Quinta-Feira" itemValue="4" />
 							<f:selectItem itemLabel="Sexta-Feira" itemValue="5" />
-							<f:selectItem itemLabel="Sabado" itemValue="6" />
+							<f:selectItem itemLabel="Sábado" itemValue="6" />
 							<f:selectItem itemLabel="Domingo" itemValue="0" />
 						</p:selectManyCheckbox>
 
-
-						<p:outputLabel value="Periodo" />
-						<p:selectManyCheckbox id="periodo"
-							value="#{editarVaga.vaga.periodos}" layout="grid" columns="3">
-							<f:selectItem itemLabel="Manha" itemValue="0" />
+						<p:selectManyCheckbox id="periodos" layout="grid" columns="1"
+							value="#{editarVaga.vaga.periodos}">
+							<f:selectItem itemLabel="Manhã" itemValue="0" />
 							<f:selectItem itemLabel="Tarde" itemValue="1" />
 							<f:selectItem itemLabel="Noite" itemValue="2" />
 						</p:selectManyCheckbox>
